<resources>
    <string name="app_name">Motivate Me</string>
    <string name="quotes1">“</string>
    <string name="quotes2">”</string>
    <string name="lorem_ipsum">Lorem Ipsum dolor sit amet.Lorem Ipsum dolor sit amet.Lorem Ipsum dolor sit amet.Lorem
        Ipsum dolor sit amet.Lorem Ipsum dolor sit amet.
        <br/>
        Lorem Ipsum dolor sit amet.Lorem Ipsum dolor sit amet.Lorem Ipsum dolor sit amet.Lorem Ipsum dolor sit amet.
    </string>
    <string name="unknown">-Unknown</string>
    <string name="reload">Reload</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title_activity_splash">Splash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="share_quote">Share Quote</string>
    <string name="credits">Credits</string>
    <string name="developer">Lead Developer</string>
    <string name="john_oye">John Oye</string>
    <string name="desc">My name is John Oye. <br/><br/>I am a young 13 years old front end developer. I have been coding for over 2 years.<br/><br/>I make Android Applications and Web Designs.<br/></string>
    <string name="exit">Exit</string>
</resources>