<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Toolbar android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/toolbar"
    android:background="@color/purple_500"
    android:padding="3dp"
    android:title="@string/credits"
             android:titleTextColor="@color/white"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/developer"
              android:layout_marginBottom="5dp"
              android:layout_below="@id/toolbar"
              android:textColor="@color/black"
              android:id="@+id/developer"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="10dp"
              android:textSize="40sp"/>
    <ImageView android:id="@+id/imv" android:layout_below="@id/developer" android:layout_width="wrap_content" android:layout_height="400dp"
    android:contentDescription="@string/developer"
    android:src="@drawable/developer"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:text="@string/john_oye"
    android:layout_below="@id/imv"
    android:textColor="@color/black"
              android:id="@+id/name"
    android:layout_centerHorizontal="true"
              android:layout_marginTop="10dp"
    android:textSize="40sp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:text="@string/desc"
              android:id="@+id/desc"
    android:layout_below="@id/name"
    android:textColor="@color/black"
    android:layout_centerHorizontal="true"
    android:textSize="20sp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="7dp"/>

</RelativeLayout>
</ScrollView>